increased font size to prevent auto zoom on iphone

--- a/src/scss/components/_inputs.scss
+++ b/src/scss/components/_inputs.scss
@@ -68,7 +68,7 @@ label {
   fieldset { margin: 12px 0; }
   .default-field { 
     width: 100%; 
-    font-size: 14px;
+    font-size: 16px;
   }
   .input-sm { 
     width: 100%; 
